Unit scale affects camera focal length #42026

Closed
opened 2014-09-30 14:57:41 +02:00 by Ejner Fergo · 7 comments

System Information
OS: Linux 64bit / Win7 64bit
GFX: Nvidia

Blender Version
Broken: 2.67b - 2.72 RC1 eb464ee
Worked: 2.66a

Short description of error
I'm sorry to report this late, but just found out since I normally don't scale the units.
Scaling the unit (metric/imperial) by eg. 10, the camera focal length gets multiplies by this value. This is not how cameras/optics work, so what you see through the camera and what the focal length is set to, is wrong. The focal length should not change with the unit scale, since this affects eg. F/stop and camera export.

Exact steps for others to reproduce the error
No .blend attached since this is trivial to reproduce.

  1. Open Blender
  2. Select the camera, and in the data-tab see that the focal length is 35mm
  3. In the scene-tab set units to metric, and set scale to 10
  4. Go back to the camera data-tab, and see that the focal length is now 350mm. This should still be 35mm.
  5. Manually setting the focal length to 35mm, and the perspective (looking through the camera) is wrong.
**System Information** OS: Linux 64bit / Win7 64bit GFX: Nvidia **Blender Version** Broken: 2.67b - 2.72 RC1 eb464ee Worked: 2.66a **Short description of error** I'm sorry to report this late, but just found out since I normally don't scale the units. Scaling the unit (metric/imperial) by eg. 10, the camera focal length gets multiplies by this value. This is not how cameras/optics work, so what you see through the camera and what the focal length is set to, is wrong. The focal length should not change with the unit scale, since this affects eg. F/stop and camera export. **Exact steps for others to reproduce the error** No .blend attached since this is trivial to reproduce. 1) Open Blender 2) Select the camera, and in the data-tab see that the focal length is 35mm 3) In the scene-tab set units to metric, and set scale to 10 4) Go back to the camera data-tab, and see that the focal length is now 350mm. This should still be 35mm. 5) Manually setting the focal length to 35mm, and the perspective (looking through the camera) is wrong.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @EjnerFergo

Added subscriber: @EjnerFergo
Bastien Montagne self-assigned this 2014-09-30 14:58:19 +02:00

This issue was referenced by c7684b456a

This issue was referenced by c7684b456a3236549b17e731288365331beec2ed

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c7684b456a.

Closed by commit c7684b456a.
Author

Wow that was quick! Thank you! :)

Wow that was quick! Thank you! :)

This issue was referenced by 5358026368

This issue was referenced by 5358026368ac0dc9020728de7972d409760440dc
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42026
No description provided.