Fix T42026: Unit scale affects camera focal length.

Not a regression, yet maybe simple/safe enough for 2.72?